[package]
name = "mpris"
description = "Idiomatic MPRIS D-Bus interface library"
version = "3.0.0-alpha1"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]
repository = "https://github.com/Mange/mpris-rs"
readme = "README.md"
categories = ["api-bindings", "multimedia", "os::unix-apis"]
keywords = ["dbus", "mpris"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
zbus = "3.4.0"

# Example dependencies
[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
